= 2.1.0.20 =
* Distance to post badge don't set direction on map from ajax loaded listing - FIXED

= 2.1.0.19 =
* Hide select layout view button on non-GD layouts - FIXED
* Image slider & lightbox not working in map popup - FIXED
* Add listing zip required option no working with AUI - FIXED
* Region missing for address within Norway with OSM - FIXED
* GD > Listings widget carousel slider option added - ADDED

= 2.1.0.18 =
* GD listings author page not working when author permalink contains custom link - FIXED
* Compatibility changes for Jetpack v8.1+ - CHANGED
* Map markers for custom loop filtering current location on single listing page - FIXED

= 2.1.0.17 =
* Complianz | GDPR/CCPA Cookie Consent plugin integration added for GD maps - ADDED
* Show admin notices on GD pages templates for Divi Builder - ADDED
* Add listing map view field shows incorrect placeholder with AUI style - FIXED
* Prevents add listing form submit when latitude/longitude fields are hidden - FIXED
* Google XML sitemaps shows GD child term links hierarchically - FIXED
* Image displayed by [gd_post_meta] is not responsive - FIXED
* Post distance badge shows wrong distance when cache is active - FIXED
* Kadence theme single listing layout have no effect of page template settings - FIXED
* WP 5.8 block category filter updated as required - FIXED
* Post images slider shows unapproved comments images - FIXED
* Validate email address option in emails settings - FIXED
* GD > Listings block loads only 10 categories on CPT change - FIXED
* Post thumbnail title not updated for existing attachment - FIXED
* Deactivation survey popup added - ADDED
* Auto save custom field setting feature added - ADDED
* Redirect search page to search for default CPT listings - CHANGED

= 2.1.0.16 =
* Progressbar not moving during the demo content installation step - FIXED
* Hook added to filter GeoDirectory admin menu capability - ADDED