@@ -1,5 +1,6 @@
 = 2.1.0.20 =
 * Distance to post badge don't set direction on map from ajax loaded listing - FIXED
+* Add listing page shows JS error when shortcode used with Elementor text editor - FIXED
 
 = 2.1.0.19 =
 * Hide select layout view button on non-GD layouts - FIXED
